<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

     <TableLayout 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:stretchColumns="1">
	      
	<TableRow> 
	 <TextView 
	 android:id="@+id/TextView01"
	 android:layout_width="wrap_content"
	 android:layout_height="wrap_content"
	 android:text="@string/username">
	 </TextView>
	  
	 <EditText 
	 android:text=""
	 android:id="@+id/txtUname"
	 android:layout_width="fill_parent"
	 android:layout_height="wrap_content"
	 android:hint="@string/username">
	 <requestFocus />
	 </EditText>
	</TableRow>
	 
	 
	<TableRow>
	 <TextView 
	 android:id="@+id/TextView02"
	 android:layout_width="wrap_content"
	 android:layout_height="wrap_content"
	 android:text="@string/password">
	 </TextView>
	 
	 
	 <EditText 
	 android:text=""
	 android:id="@+id/txtPwd"
	 android:layout_width="fill_parent"
	 android:layout_height="wrap_content"
	 android:inputType="textPassword"
	 android:hint="@string/password">
	 <requestFocus />
	 </EditText>
	</TableRow>
	 
	 
	<TableRow>
	 <Button
	 android:id="@+id/btnRegMain"
	 android:layout_width="fill_parent"
	 android:layout_height="wrap_content"
	 android:text="@string/registrar">
	 </Button>
	 
	 
	 <Button
	 android:id="@+id/btnLogin"
	 android:layout_width="fill_parent"
	 android:layout_height="wrap_content"
	 android:text="@string/login">
	 </Button>
	 
	 
	</TableRow>

	 
	</TableLayout>

</RelativeLayout>
