<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/linearLayoutFragmentProfile1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageViewFragment1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/profiletextViewFragmentLogin"
            android:layout_width="136dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/imageViewFragment1"
            android:text="@string/strProfileResult" />
        
        <TextView
            android:id="@+id/profiletextViewFragmentDate"
            android:layout_width="136dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profiletextViewFragmentLogin"
            android:layout_toRightOf="@+id/imageViewFragment1"
            android:text="@string/strProfileResult" />

        <Button
            android:id="@+id/logoutFragment"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/profiletextViewFragmentLogin"
            android:text="Logout" />

        <ImageView
            android:id="@+id/imageMail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/logoutFragment"
            android:src="@drawable/ic_mail_icon" />
        
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/linearLayoutProfileFragment2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/profileStaticsNT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/threads" />
        <TextView
            android:id="@+id/profileStaticsNTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/profileStaticsNT"
            android:text="@string/strProfileResult" />

		<TextView
		    android:id="@+id/profileStaticsNR"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_below="@+id/profileStaticsNTN"
		    android:text="@string/replies" />

		<TextView
            android:id="@+id/profileStaticsNRN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/profileStaticsNR"
            android:layout_below="@+id/profileStaticsNTN"
            android:text="@string/strProfileResult" />

		<TextView
		    android:id="@+id/profileStaticsNS"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_below="@+id/profileStaticsNR"
		    android:text="@string/suscribers" />
 
            <TextView
            android:id="@+id/profileStaticsNSN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/profileStaticsNS"
            android:layout_below="@+id/profileStaticsNRN"
            android:text="@string/strProfileResult" />
            
        		<TextView
		    android:id="@+id/profileStaticsRatio"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_toRightOf="@+id/profileStaticsNSN"
		    android:text="@string/ratio" />
 
            <TextView
            android:id="@+id/profileStaticsRatioN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/profileStaticsRatio"
            android:text="@string/strProfileResult" />     
    </RelativeLayout>
    
    <LinearLayout
        android:id="@+id/linearLayoutFragmentProfile3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/linearLayoutProfile2"
        android:orientation="vertical" >
		
        <ListView
        android:id="@+id/ListView_useractivities_Fragment"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1" />
        
    </LinearLayout>
    
    <RelativeLayout
        android:id="@+id/linearLayoutFragmentProfile4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/linearLayoutProfile3"
        android:orientation="vertical" >

    </RelativeLayout>
    

	
   </LinearLayout>