<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ThreadActivity" >

    <RelativeLayout
        android:id="@+id/linearLayout_thread_specific"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center|top"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/threadImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            
            android:src="@drawable/ic_launcher" />
        
        <TextView
            android:id="@+id/thread_title_specific"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/threadImage"
            android:gravity="center"
            android:text="@string/large_text"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/thread_content_specific"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/thread_title_specific"
            android:text="@string/small_text"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/thread_creator_specific"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/thread_content_specific"
            android:text="@string/small_text"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/thread_date_specific"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/thread_creator_specific"
            android:text="@string/small_text"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativoLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:layout_below="@+id/linearLayout_thread_specific"
        android:gravity="center"
        android:orientation="vertical"
        >

        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_like" />

        <TextView
            android:id="@+id/likes_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/imageButton1"
            android:text="@string/small_text"
            android:textColor="#00ff00"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        
        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_toRightOf="@+id/likes_number"
            android:src="@drawable/ic_dislike" />
        
        <TextView
            android:id="@+id/dislikes_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/imageButton2"
            android:text="@string/small_text"
            android:textColor="#ff0000"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        
    </RelativeLayout>
	
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout_thread_implier"
        android:layout_below="@+id/relativoLayout1"
        android:layout_centerHorizontal="true"
        android:orientation="vertical" >

        <ListView
            android:id="@+id/ListView_replies_list"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1" />
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/linearLayout_thread_implier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="#ff888888"
        android:gravity="center|bottom"
        android:orientation="horizontal" >
		<ImageView
            android:id="@+id/imageClip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_clip" />

		<EditText
		    android:id="@+id/editText_specific_reply"
		    android:layout_width="112dp"
		    android:layout_height="wrap_content"
		    android:ems="10" />

        <Button
            android:id="@+id/button_specficic_reply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reply_thread" />

    </LinearLayout>

</RelativeLayout>